# locust-api-load-tester

./: README.md  pyproject.toml
app/: config.py  locustfile.py
